--- a/experiences.html
+++ b/experiences.html
@@ -24,6 +24,20 @@
             <section id="experiences-container">
                 <h2 class="experience-heading">Work Experiences</h2>
                 <article class="experience">
+                    <h3>CoStar Group</h3>
+                    <picture class="right-float">
+                        <source media="(min-width: 767)" srcset="costar group small.png" width="200">
+                        <source media="(min-width: 400px)" srcset="costar group small.png" width="100">
+                        <img src="costar group small.png" alt="CoStar Group's Logo">
+                    </picture>
+                    <p class="role"><strong>SWE Intern</strong></p>
+                    <p class="position">Internship</p>
+                    <p class="dates">Summer 2024</p>
+                    <ul>
+                        <li>Incoming full-stack engineer intern.</li>
+                    </ul>
+                </article>
+                <article class="experience">
                     <h3>Open Avenues, Orb Labs</h3>
                     <picture class="right-float">
                         <source media="(min-width: 767)" srcset="Orb Labs Seal.jpeg" width="200">
@@ -34,7 +48,7 @@
                     <p class="position">Internship</p>
                     <p class="dates">June 2023 - August 2023</p>
                     <ul>
-                        <li>Designed and implemented a robust backend system for tracking and evaluating transactions on EVM-based blockchains, to provide crucial information on the best time for bridging USDC tokens from Ethereum using Stargate. </li>
+                        <li>Designed and implemented a robust backend system for tracking and evaluating transactions on EVM-based blockchains, to provide crucial information on the best time for bridging USDC tokens from Ethereum using Stargate.</li>
                         <li>Utilized TypeScript and web3 libraries to interface with Ethereum blockchain.</li>
                         <li>Employed PostgreSQL, TypeORM, and migrations for efficient data storage and version-controlled schema management.</li>
                         <li>Leveraged external APIs, including Alchemy, for querying data from various blockchain networks.</li>
