--- a/skills.html
+++ b/skills.html
@@ -28,9 +28,10 @@
                     <li>Python</li>
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>MIPS Assembly</li>
-                    <li>Swift</li>
+                    <li>JavaScript</li>
                     <li>Typescript</li>
+                    <li>Swift</li>
+                    <li>MIPS Assembly</li>
                 </ul>
                 <h2>Databases & ORMs</h2>
                 <ul>
