--- a/projects.html
+++ b/projects.html
@@ -63,40 +63,38 @@
             </section>
         </main>
         <footer>
-            <button class="dark-light-toggle" style="display: none;">&#127771;</button>
-            <noscript>
-                <p>Dark mode only available with JavaScript.</p>
-            </noscript>
+            <button class="dark-light-toggle" style="display: none;"><i id="theme-icon" class="fa-solid fa-moon"></i></button>
             <p class="footer-design">Made by Anshi</p>
             <p>Contact Me: <a href="mailto:anshisingh730@gmail.com" class="footeremail"><i>anshisingh730@gmail.com</i></a></p>
             <script>
                 const button = document.querySelector(".dark-light-toggle");
+                const themeIcon = document.getElementById("theme-icon");
                 const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)");
-            
+
                 const currentTheme = localStorage.getItem("theme");
-                if (currentTheme == "dark") {
+                if (currentTheme === "dark") {
                     document.body.classList.toggle("dark-mode");
-                    button.innerHTML = "&#127771;";
-                } else if (currentTheme == "light") {
+                    themeIcon.className = "fa-solid fa-moon";
+                } else if (currentTheme === "light") {
                     document.body.classList.toggle("light-mode");
-                    button.innerHTML = "&#127774;";
+                    themeIcon.className = "fa-solid fa-sun";
                 }
-            
+
                 button.addEventListener("click", function () {
                     if (prefersDarkScheme.matches) {
                         document.body.classList.toggle("light-mode");
                         var theme = document.body.classList.contains("light-mode") ? "light" : "dark";
-                        button.innerHTML = theme === "light" ? "&#127774;" : "&#127771;";
+                        themeIcon.className = theme === "light" ? "fa-solid fa-sun" : "fa-solid fa-moon";
                     } else {
                         document.body.classList.toggle("dark-mode");
                         var theme = document.body.classList.contains("dark-mode") ? "dark" : "light";
-                        button.innerHTML = theme === "dark" ? "&#127771;" : "&#127774;";
+                        themeIcon.className = theme === "dark" ? "fa-solid fa-moon" : "fa-solid fa-sun";
                     }
                     localStorage.setItem("theme", theme);
                 });
 
                 button.style.display = "inline-block";
-            </script>              
+            </script>             
         </footer>
     </body>
 </html>
