--- a/experiences.html
+++ b/experiences.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Personal Portfolio</title>
         <link rel="stylesheet" type="text/css" href="style.css" media="screen">
+        <script src="https://kit.fontawesome.com/42b03e614a.js" crossorigin="anonymous"></script>    
     </head>
     <body>
         <header>
@@ -35,6 +36,21 @@
                     <p class="dates">Summer 2024</p>
                     <ul>
                         <li>Incoming full-stack engineer intern.</li>
+                    </ul>
+                </article>
+                <article class="experience">
+                    <h3>Women in Computing @ UC San Diego</h3>
+                    <picture class="right-float">
+                        <source media="(min-width: 767)" srcset="wic logo.png" width="200">
+                        <source media="(min-width: 400px)" srcset="wic logo.png" width="100">
+                        <img src="wic logo.png" alt="Orb Lab's Logo">
+                    </picture>
+                    <p class="role"><strong>Tech Dev Intern</strong></p>
+                    <p class="position">Board Member</p>
+                    <p class="dates">January 2024</p>
+                    <ul>
+                        <li>Develop workshops on technical skills such as interview prep and resume writing.</li>
+                        <li>Plan tech talks with industry or academic professionals on a quarterly basis.</li>
                     </ul>
                 </article>
                 <article class="experience">
