--- a/skills.html
+++ b/skills.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Personal Portfolio</title>
         <link rel="stylesheet" type="text/css" href="style.css" media="screen">
+        <script src="https://kit.fontawesome.com/42b03e614a.js" crossorigin="anonymous"></script>    
     </head>
     <body>
         <header>
