--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                     <!-- WITHOUT JS -->
                     <section class="project-buttons-no-js" style="display: none">
                         <a href="https://github.com/WouldYouRatherApp/WouldYouRatherApp" class="project-button" target="_blank" title="GitHub">🐙</a>
-                        <a href="https://www.youtube.com/embed/h9dNF2-z7DE?si=RH9ySSLfdb-t_yGC" class="project-button" target="_blank" title="App Walkthrough">🎥</a>
+                        <a href="https://www.youtube.com/embed/h9dNF2-z7DE?si=RH9ySSLfdb-t_yGC" style="display: none" class="project-button" target="_blank" title="App Walkthrough">🎥</a>
                     </section>
                     <ul>
                         <li>Used Swift to develop an original app where users can create and interact with would you rather questions.</li>
@@ -60,7 +60,7 @@
                         <li>Utilized Figma to create front-end designs, including wireframes and the app logo, enhancing overall user experience.</li>
                         <li>Employed Git for project management to delegate tasks, create plans and frameworks - ensuring efficient collaboration.</li>
                     </ul>
-                    <iframe class="iframe-container" class="center-video" height="315" src="https://www.youtube.com/embed/h9dNF2-z7DE?si=RH9ySSLfdb-t_yGC" title="App Walkthrough" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe class="iframe-container center-video" height="315" src="https://www.youtube.com/embed/h9dNF2-z7DE?si=RH9ySSLfdb-t_yGC" title="App Walkthrough" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </article>
                 <article class="project">
                     <h3>Car Search App</h3>
@@ -71,13 +71,13 @@
                     <!-- WITHOUT JS -->
                     <section class="project-buttons-no-js" style="display: none">
                         <a href="https://github.com/anshisinghh/Car-Search" class="project-button" target="_blank" title="GitHub">🐙</a>
-                        <a href="https://www.youtube.com/watch?v=h9dNF2-z7DE" class="project-button" target="_blank" title="App Walkthrough">🎥</a>
+                        <a href="https://www.youtube.com/watch?v=h9dNF2-z7DE" style="display: none" class="project-button" target="_blank" title="App Walkthrough">🎥</a>
                     </section>
                     <ul>
                         <li>Collaborated in a hackathon to develop a program that matches user requirements with the best available car for sale.</li>
                         <li>Utilized the vehicle listings API by AutoDev to effectively design and enhance the process.</li>
                     </ul>
-                    <iframe class="iframe-container" class="center-video" height="315" src="https://www.youtube.com/embed/UWfbDvBuqMw?si=3OzedNz3WswOuBPV" title="App Walkthrough" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe class="iframe-container center-video" height="315" src="https://www.youtube.com/embed/UWfbDvBuqMw?si=3OzedNz3WswOuBPV" title="App Walkthrough" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </article>
             </section>
             <script>
