--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                     <!-- WITHOUT JS -->
                     <section class="project-buttons-no-js" style="display: none">
                         <a href="https://github.com/WouldYouRatherApp/WouldYouRatherApp" class="project-button" target="_blank" title="GitHub">🐙</a>
-                        <a href="https://www.youtube.com/embed/h9dNF2-z7DE?si=RH9ySSLfdb-t_yGC" style="display: none" class="project-button" target="_blank" title="App Walkthrough">🎥</a>
+                        <a href="https://www.youtube.com/embed/h9dNF2-z7DE?si=RH9ySSLfdb-t_yGC" style="display: none" class="project-button video-button" target="_blank" title="App Walkthrough">🎥</a>
                     </section>
                     <ul>
                         <li>Used Swift to develop an original app where users can create and interact with would you rather questions.</li>
@@ -71,7 +71,7 @@
                     <!-- WITHOUT JS -->
                     <section class="project-buttons-no-js" style="display: none">
                         <a href="https://github.com/anshisinghh/Car-Search" class="project-button" target="_blank" title="GitHub">🐙</a>
-                        <a href="https://www.youtube.com/watch?v=h9dNF2-z7DE" style="display: none" class="project-button" target="_blank" title="App Walkthrough">🎥</a>
+                        <a href="https://www.youtube.com/watch?v=h9dNF2-z7DE" style="display: none" class="project-button video-button" target="_blank" title="App Walkthrough">🎥</a>
                     </section>
                     <ul>
                         <li>Collaborated in a hackathon to develop a program that matches user requirements with the best available car for sale.</li>
@@ -96,6 +96,9 @@
                     }
                     .iframe-container {
                         display: none !important;
+                    }
+                    .video-button {
+                        display: flex !important;
                     }
                 </style>
             </noscript>
