--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
                 </noscript>
                 <!-- WITH JS -->
                 <ul class="contact-buttons-js">
-                    <li><a href="mailto:anshisingh730@gmail.com" id="mail" class="contact-button" title="Email"><i class="fa-solid fa-envelope"></i></a></li>
-                    <li><a href="tel:+19493534274" id="phone" class="contact-button" title="Phone Number"><i class="fa-solid fa-phone"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/anshisingh/" id="linkedin" class="contact-button" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/anshisinghh" id="github" class="contact-button" target="_blank" title="GitHub"><i class="fa-brands fa-github"></i></a></li>
-                    <li><a href="Anshi_Singh_Resume.pdf" id="pdf" class="contact-button" download title="Download PDF Resume"><i class="fa-solid fa-file-pdf"></i></a></li>
+                    <li><a href="mailto:anshisingh730@gmail.com" class="mail contact-button" title="Email"><i class="fa-solid fa-envelope"></i></a></li>
+                    <li><a href="tel:+19493534274" class="phone contact-button" title="Phone Number"><i class="fa-solid fa-phone"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/anshisingh/" class="linkedin contact-button" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/anshisinghh" class="github contact-button" target="_blank" title="GitHub"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="Anshi_Singh_Resume.pdf" class="pdf contact-button" download title="Download PDF Resume"><i class="fa-solid fa-file-pdf"></i></a></li>
                 </ul>  
                 <!-- WITHOUT JS -->
                 <ul class="contact-buttons-no-js">
-                    <li><a href="mailto:anshisingh730@gmail.com" id="mail" class="contact-button" title="Email">✉️</a></li>
-                    <li><a href="tel:+19493534274" id="phone" class="contact-button" title="Phone Number">📞</a></li>
-                    <li><a href="https://www.linkedin.com/in/anshisingh/" id="linkedin" class="contact-button" target="_blank" title="LinkedIn">🔗</a></li>
-                    <li><a href="https://github.com/anshisinghh" id="github" class="contact-button" target="_blank" title="GitHub">🐙</a></li>
-                    <li><a href="Anshi_Singh_Resume.pdf" id="pdf" class="contact-button" download title="Download PDF Resume">📄</a></li>
+                    <li><a href="mailto:anshisingh730@gmail.com" class="mail contact-button" title="Email">✉️</a></li>
+                    <li><a href="tel:+19493534274" class="phone contact-button" title="Phone Number">📞</a></li>
+                    <li><a href="https://www.linkedin.com/in/anshisingh/" class="linkedin contact-button" target="_blank" title="LinkedIn">🔗</a></li>
+                    <li><a href="https://github.com/anshisinghh" class="github contact-button" target="_blank" title="GitHub">🐙</a></li>
+                    <li><a href="Anshi_Singh_Resume.pdf" class="pdf contact-button" download title="Download PDF Resume">📄</a></li>
                 </ul>        
             </section>
             <section id="get-in-touch-container">
