--- a/experiences.html
+++ b/experiences.html
@@ -35,7 +35,7 @@
                     <p class="position">Internship</p>
                     <p class="dates">Summer 2024</p>
                     <ul>
-                        <li>Incoming full-stack engineer intern.</li>
+                        <li>Incoming full-stack engineer intern with Homes.com.</li>
                     </ul>
                 </article>
                 <article class="experience">
