--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Anshi Singh</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">About Me</a></li>
+                    <li class="current-page"><a href="index.html">About Me</a></li>
                     <li><a href="education.html">Education</a></li>
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="projects.html">Projects</a></li>
