--- a/education.html
+++ b/education.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">About Me</a></li>
-                    <li><a href="education.html">Education</a></li>
+                    <li class="current-page"><a href="education.html">Education</a></li>
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="skills.html">Skills</a></li>
