--- a/skills.html
+++ b/skills.html
@@ -17,7 +17,7 @@
                     <li><a href="education.html">Education</a></li>
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="skills.html">Skills</a></li>
+                    <li class="current-page"><a href="skills.html">Skills</a></li>
                 </ul>
             </nav>
         </header>
