--- a/experiences.html
+++ b/experiences.html
@@ -48,8 +48,12 @@
                     <p class="role"><strong>Tech Dev Intern</strong></p>
                     <p class="dates">January 2024</p>
                     <ul>
-                        <li>Develop workshops on technical skills such as interview prep and resume writing.</li>
-                        <li>Plan tech talks with industry or academic professionals on a quarterly basis.</li>
+                        <li>Developed workshops on technical skills such as interview prep and resume writing.</li>
+                        <li>Planned tech talks with industry or academic professionals on a quarterly basis.</li>
+                        <li>Planned project teams every quarter, which includes but is not limited to:</li>
+                        <li class="tabbed">Provided a 10 week plan for projects.</li>
+                        <li class="tabbed">Hosted HTML, CSS, and Javascript workshops to help with technical skills.</li>
+                        <li class="tabbed">Worked with project leads to make sure things run smoothly.</li>
                     </ul>
                 </article>
                 <article class="experience">
