--- a/experiences.html
+++ b/experiences.html
@@ -46,7 +46,7 @@
                         <img src="wic logo.png" alt="Orb Lab's Logo">
                     </picture>
                     <p class="role"><strong>Tech Dev Intern</strong></p>
-                    <p class="dates">January 2024</p>
+                    <p class="dates">January 2024 - June 2024</p>
                     <ul>
                         <li>Developed workshops on technical skills such as interview prep and resume writing.</li>
                         <li>Planned tech talks with industry or academic professionals on a quarterly basis.</li>
