--- a/experiences.html
+++ b/experiences.html
@@ -33,7 +33,7 @@
                     </picture>
                     <p class="role"><strong>SWE Intern</strong></p>
                     <p class="position">Internship</p>
-                    <p class="dates">Summer 2024</p>
+                    <p class="dates">June 2024 - August 2024</p>
                     <ul>
                         <li>Incoming full-stack engineer intern with Homes.com.</li>
                     </ul>
