--- a/experiences.html
+++ b/experiences.html
@@ -31,7 +31,7 @@
                         <source media="(min-width: 400px)" srcset="costar group small.png" width="100">
                         <img src="costar group small.png" alt="CoStar Group's Logo">
                     </picture>
-                    <p class="role"><strong>SWE Intern</strong></p>
+                    <p class="role"><strong>Software Engineering Intern</strong></p>
                     <p class="position">Internship</p>
                     <p class="dates">June 2024 - August 2024</p>
                     <ul>
