--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@
                 <p><strong>Bachelor of Science, Computer Science</strong></p>
                 <p>September 2023 - June 2025</p>
                 <h3>Relevant Coursework</h3>
-                <p><strong>Tech:</strong> Algorithm Design and Analysis, Data Structures, Advanced Programming, Web Client Languages, Artificial Intelligence, Computer Organization and Assembly Language, Discrete Mathematics</p>
+                <p><strong>Tech:</strong> Components and Design Techniques for Digital Systems, Web Client Languages, Artificial Intelligence, Computer Organization and Assembly Language, Algorithm Design and Analysis, Data Structures, Advanced Programming, Discrete Mathematics</p>
                 <p><strong>Math:</strong> Linear Algebra, Differential Equations, Vector Calculus, Probability & Statistics</p>
                 <p><strong>Physics:</strong> Circuit Theory, Statics & Dynamics, Classical Physics</p>
             </section>
