--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <img src="headshot.png" alt="Anshi's Headshot" width="100">
                 </picture>
                 <h2>Hi, I'm Anshi,</h2>
-                <p>I am a Computer Science student at UC San Diego, with an expected graduation date of June 2025. I am passionate about programming and both full-stack and back-end development, with experiences in mobile app development, as well. I have done extensive coursework in data structures, algorithms, and programming in Python and C++. In addition, I have industry level internship experience as a student consultant who worked on a project on blockchain technology. <strong>Currently seeking a SWE internship for summer 2024.</strong></p>
+                <p>I am a Computer Science student at UC San Diego, with an expected graduation date of June 2025. I am passionate about programming and both full-stack and back-end development, with experiences in mobile app development as well. I have done extensive coursework in data structures, algorithms, and programming in Python and C++. In addition, I have industry level internship experience as a student consultant who worked on a project on blockchain technology. <strong>Currently seeking a SWE internship for summer 2024.</strong></p>
                 <p>I am sharing my educational and programming journey. Connect with me!</p>
                 <script>
                     document.addEventListener('DOMContentLoaded', function () {
