--- a/experiences.html
+++ b/experiences.html
@@ -45,14 +45,20 @@
                         <source media="(min-width: 400px)" srcset="wic logo.png" width="100">
                         <img src="wic logo.png" alt="Orb Lab's Logo">
                     </picture>
+                    <p class="role"><strong>Tech Dev Projects Chair</strong></p>
+                    <p class="dates">June 2024 - June 2025</p>
+                    <ul>
+                        <li>Organized project teams each quarter, overseeing 60+ girls each quarter in web development projects.
+:</li>
+                        <li class="tabbed">Developed a 10-week plan for project activities.</li>
+                        <li class="tabbed">Conducted workshops on HTML, CSS, and Javascript to enhance technical skills.</li>
+                        <li class="tabbed">Collaborated with the project chair to ensure the smooth operation of the program.</li>
+                    </ul>
                     <p class="role"><strong>Tech Dev Intern</strong></p>
                     <p class="dates">January 2024 - June 2024</p>
                     <ul>
-                        <li>Developed workshops on technical skills such as interview prep and resume writing.</li>
-                        <li>Planned project teams every quarter, which includes but is not limited to:</li>
-                        <li class="tabbed">Provided a 10 week plan for projects.</li>
-                        <li class="tabbed">Hosted HTML, CSS, and Javascript workshops to help with technical skills.</li>
-                        <li class="tabbed">Worked with project leads to make sure things run smoothly.</li>
+                        <li>Worked with tech dev leads to develop workshops on technical skills such as interview preparation, resume writing, Figma, HTML, CSS, and JavaScript.</li>
+                        <li>Worked with project leads to plan project teams every quarter, overseeing 60+ girls each quarter in web development projects.</li>
                     </ul>
                 </article>
                 <article class="experience">
