--- a/experiences.html
+++ b/experiences.html
@@ -45,7 +45,7 @@
                         <source media="(min-width: 400px)" srcset="wic logo.png" width="100">
                         <img src="wic logo.png" alt="Orb Lab's Logo">
                     </picture>
-                    <p class="role"><strong>Tech Dev Projects Chair</strong></p>
+                    <p class="role"><strong>Tech Dev Projects Co-Chair</strong></p>
                     <p class="dates">June 2024 - June 2025</p>
                     <ul>
                         <li>Organized project teams each quarter, overseeing 60+ girls each quarter in web development projects.
