--- a/experiences.html
+++ b/experiences.html
@@ -48,7 +48,7 @@
                     <p class="role"><strong>Tech Dev Projects Co-Chair</strong></p>
                     <p class="dates">June 2024 - June 2025</p>
                     <ul>
-                        <li>Organized project teams each quarter, overseeing 60+ girls each quarter in web development projects.
+                        <li>Organized project teams each quarter, overseeing 60+ members each quarter in web development projects.
 :</li>
                         <li class="tabbed">Developed a 10-week plan for project activities.</li>
                         <li class="tabbed">Conducted workshops on HTML, CSS, and Javascript to enhance technical skills.</li>
@@ -58,7 +58,7 @@
                     <p class="dates">January 2024 - June 2024</p>
                     <ul>
                         <li>Worked with tech dev leads to develop workshops on technical skills such as interview preparation, resume writing, Figma, HTML, CSS, and JavaScript.</li>
-                        <li>Worked with project leads to plan project teams every quarter, overseeing 60+ girls each quarter in web development projects.</li>
+                        <li>Worked with project leads to plan project teams every quarter, overseeing 60+ members each quarter in web development projects.</li>
                     </ul>
                 </article>
                 <article class="experience">
