--- a/education.html
+++ b/education.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="This is Anshi Singh's personal portfolio website.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" href="book.ico" type="image/x-icon">
         <title>Personal Portfolio</title>
         <link rel="stylesheet" type="text/css" href="style.css" media="screen">
         <script src="https://kit.fontawesome.com/42b03e614a.js" crossorigin="anonymous"></script> 
