--- a/experiences.html
+++ b/experiences.html
@@ -49,8 +49,7 @@
                     <p class="role"><strong>Tech Dev Projects Co-Chair</strong></p>
                     <p class="dates">June 2024 - June 2025</p>
                     <ul>
-                        <li>Organized project teams each quarter, overseeing 60+ members each quarter in web development projects.
-:</li>
+                        <li>Organized project teams each quarter, overseeing 60+ members each quarter in web development projects.</li>
                         <li class="tabbed">Developed a 10-week plan for project activities.</li>
                         <li class="tabbed">Conducted workshops on HTML, CSS, and Javascript to enhance technical skills.</li>
                         <li class="tabbed">Collaborated with the project chair to ensure the smooth operation of the program.</li>
