--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,28 @@
             <h2 class="project-heading">Projects</h2>
             <section class="projects-container">
                 <article class="project">
+                    <h3>Developer Journal App</h3>
+                    <!-- WITH JS -->
+                    <section class="project-buttons-js">
+                        <a href="https://github.com/cse110-sp24-group1/cse110-sp24-group1" class="project-button" target="_blank" title="GitHub"><i class="fa-brands fa-github"></i></a>
+                    </section>
+                    <!-- WITHOUT JS -->
+                    <section class="project-buttons-no-js" style="display: none">
+                        <a href="https://github.com/cse110-sp24-group1/cse110-sp24-group1" class="project-button" target="_blank" title="GitHub">🐙</a>
+                        <a href="https://www.youtube.com/watch?v=5OWocxIp6Mo&ab_channel=GwendolynWong" style="display: none" class="project-button video-button" target="_blank" title="Project Development Process and Agile Methods Walkthrough">🎥</a>
+                        <a href="https://www.youtube.com/watch?v=7AvkU47gFOc&ab_channel=GwendolynWong" style="display: none" class="project-button video-button" target="_blank" title="Website Walkthrough">🎥</a>
+                    </section>
+                    <ul>
+                        <li>Led a team of 11 to develop a comprehensive note-taking and task management website using HTML, CSS, and JavaScript.</li>
+                        <li>Easily create and manage notes and tasks with efficient organization and dedicated task lists.</li>
+                        <li>Format notes with powerful markdown capabilities using SimpleMDE's toolbar and switch between dark and light modes for a personalized writing experience.</li>
+                        <li>Securely manage your data with local storage and enjoy a user-friendly UI with full keyboard accessibility.</li>
+                        <li>Quickly find specific notes and tasks with a robust search bar for enhanced productivity.</li>
+                    </ul>
+                    <iframe class="iframe-container center-video" height="315" src="https://www.youtube.com/watch?v=5OWocxIp6Mo&ab_channel=GwendolynWong" title="Project Development Process and Agile Methods Walkthrough" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe class="iframe-container center-video" height="315" src="https://www.youtube.com/watch?v=7AvkU47gFOc&ab_channel=GwendolynWong" title="Website Walkthrough" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </article>
+                <article class="project">
                     <h3>Twitter, Parstagram, and Flix App</h3>
                     <!-- WITH JS -->
                     <section class="project-buttons-js">
