--- a/projects.html
+++ b/projects.html
@@ -44,8 +44,8 @@
                         <li>Securely manage your data with local storage and enjoy a user-friendly UI with full keyboard accessibility.</li>
                         <li>Quickly find specific notes and tasks with a robust search bar for enhanced productivity.</li>
                     </ul>
-                    <iframe class="iframe-container center-video" height="315" src="https://www.youtube.com/watch?v=5OWocxIp6Mo&ab_channel=GwendolynWong" title="Project Development Process and Agile Methods Walkthrough" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <iframe class="iframe-container center-video" height="315" src="https://www.youtube.com/watch?v=7AvkU47gFOc&ab_channel=GwendolynWong" title="Website Walkthrough" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/5OWocxIp6Mo?si=tevGYMVOM-3xx_xV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7AvkU47gFOc?si=FaTBmrrZpF5Qq9Y0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </article>
                 <article class="project">
                     <h3>Twitter, Parstagram, and Flix App</h3>
