--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
             <h2 class="project-heading">Projects</h2>
             <section class="projects-container">
                 <article class="project">
-                    <h3>Developer Journal App</h3>
+                    <h3>Developer Journal Website</h3>
                     <!-- WITH JS -->
                     <section class="project-buttons-js">
                         <a href="https://github.com/cse110-sp24-group1/cse110-sp24-group1" class="project-button" target="_blank" title="GitHub"><i class="fa-brands fa-github"></i></a>
