--- a/experiences.html
+++ b/experiences.html
@@ -46,7 +46,7 @@
                         <source media="(min-width: 400px)" srcset="wic logo.png" width="100">
                         <img src="wic logo.png" alt="Orb Lab's Logo">
                     </picture>
-                    <p class="role"><strong>Tech Dev Projects Co-Chair</strong></p>
+                    <p class="role"><strong>Projects Co-Chair</strong></p>
                     <p class="dates">June 2024 - June 2025</p>
                     <ul>
                         <li>Organized project teams each quarter, overseeing 60+ members each quarter in web development projects.</li>
