--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,7 @@
                     <ul>
                         <li>Led a team of 11 to develop a comprehensive note-taking and task management website using HTML, CSS, and JavaScript.</li>
                         <li>Utilized Git for version control and project management, ensuring efficient collaboration and code integrity.</li>
+                        <li>Employed Agile methodologies, including sprint reviews and retrospectives, to manage project tasks, iterations, and team collaboration effectively.</li>
                         <li>Easily create and manage notes and tasks with efficient organization and dedicated task lists.</li>
                         <li>Format notes with powerful markdown capabilities using SimpleMDE's toolbar and switch between dark and light modes for a personalized writing experience.</li>
                         <li>Securely manage your data with local storage and enjoy a user-friendly UI with full keyboard accessibility.</li>
