--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="headshot.png" alt="Anshi's Headshot" width="100">
                 </picture>
                 <h2>Hi, I'm Anshi,</h2>
-                <p>I am a Computer Science student at UC San Diego, with an expected graduation date of June 2025. I am passionate about programming and both full-stack and back-end development, with experiences in mobile app development as well. I have done extensive coursework in data structures, algorithms, and programming in Python and C++. In addition, I have industry level internship experience as a student consultant who worked on a project on blockchain technology. <strong>Currently seeking a SWE internship for summer 2024.</strong></p>
+                <p>I am a Computer Science student at UC San Diego, expected to graduate in June 2025. I am passionate about programming and have a strong foundation in both full-stack and back-end development, with additional experience in mobile app and front-end development. My coursework includes extensive studies in data structures, algorithms, and programming in Python and C++. I have gained valuable industry experience as a Software Engineering Intern at CoStar Group for Homes.com. Additionally, I have led a team project using Agile methods, enhancing my skills in software engineering and team management. <strong>I am currently seeking full-time software engineering positions or internships for summer 2025.</strong></p>
                 <p>I am sharing my educational and programming journey. Connect with me!</p>
                 <script>
                     document.addEventListener('DOMContentLoaded', function () {
